@@ -1027,14 +1027,14 @@ Titles and Help for the System Fields
 
     <epp:phrase id="Plugin/Screen/Import:title">Import Items</epp:phrase>
 
-    <epp:phrase id="Plugin/Screen/Import:action:test:title">Test Import</epp:phrase>
-    <epp:phrase id="Plugin/Screen/Import:action:import:title">Import</epp:phrase>
+    <epp:phrase id="Plugin/Screen/Import:action:test:title">Test</epp:phrase>
+    <epp:phrase id="Plugin/Screen/Import:action:import:title">Test + Import</epp:phrase>
 
     <epp:phrase id="Plugin/Screen/Import:no_file">You must specify a file to import.</epp:phrase>
 
-    <epp:phrase id="Plugin/Screen/Import:test_completed">Test import completed: <epc:pin name="count"/> item(s) found. Although this test completed successfully you should take note of any warning messages before proceeding.</epp:phrase>
+    <epp:phrase id="Plugin/Screen/Import:test_completed">Test run completed: <epc:pin name="count"/> item(s) found.</epp:phrase>
 
-    <epp:phrase id="Plugin/Screen/Import:test_failed">Test import failed: <epc:pin name="count"/> item(s) found before an error caused the test to abort. Carefully check any warning messages before proceeding.</epp:phrase>
+    <epp:phrase id="Plugin/Screen/Import:test_failed">Test run failed: <epc:pin name="count"/> item(s) found before an error caused the test run to abort. Carefully check any warning messages before proceeding.</epp:phrase>
 
     <epp:phrase id="Plugin/Screen/Import:import_completed">Import completed: <epc:pin name="count"/> item(s) imported.</epp:phrase>
 
