@@ -5964,3 +5964,9 @@ PACKAGE: 2.2.99.2
 2006-12-11 moj
  * Updated RequestDeletion to use the nicer mail format, and reworded
     email to avoid 'click here'.
+
+2006-12-11 cjg
+ * Changed cookies to expire on browser close.
+ * Improved style of search field titles in editorial scope select
+ * Added pretty styles to Import screen.
+ * Changed eprint_render to call null action on request copy screen.
